--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,10 @@
 
 
 
-@media (max-width:1200px) {
+@media (max-width:1100px) {
+    .ntop{
+        margin-top: 10px;
+    }
     .ntopb{
         margin-top: 10px;
         display: flex;
