--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@
     text-decoration: none;
 }
 
-
 .signup{
     width: 100px;
     height: 35px;
@@ -30,17 +29,11 @@
 
 
 
-.hero{
+
+
+.hero1{
     margin-top: 100px;
 }
-
-
-
-
-
-
-
-
 .hero1-h1{
     color: #0B132A;
     font-size: 50px;
