--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,17 @@
 
 
 
-/* Hero 2 -------------------------------------*/
+/* Hero 2 -------------------------------------           
+    max-width: 500px;
+
+
+    @media (max-width: 500px) {
+    .card-item {
+        width: 100%;
+    }
+}
+
+*/
 
 
 
@@ -89,7 +99,6 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
     width: 100%;
-    max-width: 500px;
 }
 
 .card-content {
@@ -131,11 +140,6 @@
     color: #333;
 }
 
-@media (max-width: 500px) {
-    .card-item {
-        width: 100%;
-    }
-}
 
 
 
