--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,10 @@
     font-size: 18px;
     font-weight: bold;
 }
+.card-titles {
+    font-size: 16px;
+    font-weight: bold;
+}
 
 .card-value {
     font-size: 24px;
@@ -144,19 +148,28 @@
 
 
 
+/* Hero 2 -------------------------------------  */
 
+.hero3{
+    margin-top: 50px;
+}
 
+.hero3-p{
+    margin-top: 20px;
+    color: #4F5665;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 187.5% */
+}
 
-
-
-
-
-
-
-
-
-
-
+.hero3spantext{
+    color: #4F5665;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 214.286% */
+}
 
 
 
@@ -189,6 +202,10 @@
     }
     .hero1-p{
         margin-top: 40px;
+    }
+    .hero3{
+        margin-top: 80px;
+        margin-bottom: 60px;
     }
 }
 
