--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
     width: 100%;
+    margin-top: 20px;
 }
 
 .card-content {
@@ -148,7 +149,7 @@
 
 
 
-/* Hero 2 -------------------------------------  */
+/* Hero 3-------------------------------------  */
 
 .hero3{
     margin-top: 50px;
@@ -170,6 +171,47 @@
     font-weight: 400;
     line-height: 30px; /* 214.286% */
 }
+
+
+
+
+/* Hero 4-------------------------------------  */
+
+
+.hero4txt{
+    margin-top: 60px;
+}
+
+.hero4h{
+    color: #0B132A;
+    text-align: center;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 50px; /* 142.857% */
+}
+
+.hero4p{
+    color: #4F5665;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 187.5% */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
