--- a/styles.css
+++ b/styles.css
@@ -204,17 +204,49 @@
 
 
 
+/* Hero 5-------------------------------------  */
+
+.hero5txt{
+    margin-top: 100px;
+}
+
+.hero5h{
+    color: #0B132A;
+    text-align: center;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 50px; /* 142.857% */
+}
 
 
+.hero5p{
+    color: #4F5665;
+    text-align: center;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 187.5% */
+}
+
+.world{
+    margin-top: 50px;
+   width: 100%;
+}
 
 
-
-
-
-
-
-
-
+.company{
+    margin-top: 60px;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+.companies{
+    height: 64px;
+    width: 164px;
+}
 
 
 
