--- a/styles.css
+++ b/styles.css
@@ -242,6 +242,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 30px;
+    flex-wrap: wrap;
 }
 .companies{
     height: 64px;
