--- a/styles.css
+++ b/styles.css
@@ -241,13 +241,41 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    margin-bottom: 30px;
+    margin-bottom: 80px;
     flex-wrap: wrap;
 }
 .companies{
     height: 64px;
     width: 164px;
 }
+
+/* Hero 6-------------------------------------  */
+
+
+
+.hero6h{
+    color: #0B132A;
+    text-align: center;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 50px; /* 142.857% */
+}
+
+
+.hero6p{
+    color: #4F5665;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 187.5% */
+}
+
+.cards{
+    margin-bottom: 50px;
+}
+
 
 
 
