--- a/styles.css
+++ b/styles.css
@@ -343,7 +343,26 @@
 
 
 
-
+.footer {
+    background-color: #fff;
+    padding: 30px 0;
+}
+.social-links a {
+    margin: 0 10px;
+    color: #333;
+    font-size: 20px;
+}
+.social-links a:hover {
+    color: #ff5733;
+}
+.footer-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.footer-col {
+    margin-bottom: 20px;
+}
 
 
 
@@ -386,6 +405,11 @@
     .hero7txt{
         margin-left: 250px;
     }
+    .card1{
+        display: flex;
+        position: relative;
+        top: 150px;
+    }
     
 }
 
@@ -412,12 +436,60 @@
 
 
 
+/* Media ------------------------------------
 
 
+.footer {
+    background-color: #f2f2f2;
+    padding: 40px 0;
+  }
+  
+  .footer-logo {
+    width: 150px;
+  }
+  
+  .social-icons {
+    list-style: none;
+    padding: 0;
+    margin: 20px 0;
+  }
+  
+  .social-icons li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  
+  .social-icons li a {
+    color: #333;
+    font-size: 20px;
+  }
+  
+  .footer-links {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .footer-links li {
+    margin-bottom: 10px;
+  }
+  
+  .footer-links li a {
+    color: #333;
+    text-decoration: none;
+  }
+  
+  .footer-links li a:hover {
+    text-decoration: underline;
+  }
+  
+  @media (max-width: 768px) {
+    .col-md-4 {
+      margin-bottom: 20px;
+    }
+  }
 
 
-
-
+-*/
 
 
 
